--- a/index.html
+++ b/index.html
@@ -3,11 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to flavio.gay!</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💖</text></svg>">
     
     <!-- 1. SCRIPT FOR THE SPLINE VIEWER (no changes here) -->
     <script type="module" src="https://unpkg.com/@splinetool/viewer@1.10.22/build/spline-viewer.js"></script>
+
+    <!-- HTML Meta Tags -->
+    <title>Flavio is gay</title>
+    <meta name="description" content="A fabulous corner of the internet.">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://flavio.gay">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Flavio is gay">
+    <meta property="og:description" content="A fabulous corner of the internet.">
+    <meta property="og:image" content="http://flavio.gay/og-banner.png">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="flavio.gay">
+    <meta property="twitter:url" content="https://flavio.gay">
+    <meta name="twitter:title" content="Flavio is gay">
+    <meta name="twitter:description" content="A fabulous corner of the internet.">
+    <meta name="twitter:image" content="http://flavio.gay/og-banner.png">
+
+    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
     <style>
         :root {
