--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script type="module" src="https://unpkg.com/@splinetool/viewer@1.10.22/build/spline-viewer.js"></script>
 
     <!-- HTML Meta Tags -->
-    <title>Flavio is gay</title>
+    <title>Daniel is gay</title>
     <meta name="description" content="A fabulous corner of the internet.">
 
     <!-- Facebook Meta Tags -->
@@ -143,8 +143,8 @@
 <body>
     
     <main class="content-wrapper">
-        <img src="https://avatars.githubusercontent.com/u/67586641?v=4" alt="Flavio's Avatar" class="avatar">
-        <h1>flavio.gay</h1>
+        <img src="/db.jpg" alt="Daniel's Avatar" class="avatar">
+        <h1>danie-boll.gay</h1>
         <p>A fabulous corner of the internet.</p>
         <spline-viewer 
             url="https://prod.spline.design/yxgBKYwU1VtzzrJG/scene.splinecode" 
