--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
     <meta name="description" content="A fabulous corner of the internet.">
 
     <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="https://flavio.gay">
+    <meta property="og:url" content="https://daniel-boll.gay">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Flavio is gay">
+    <meta property="og:title" content="daniel-boll is gay">
     <meta property="og:description" content="A fabulous corner of the internet.">
-    <meta property="og:image" content="http://flavio.gay/og-banner.png">
+    <meta property="og:image" content="http://daniel-boll.gay/og-banner.png">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta property="twitter:domain" content="flavio.gay">
-    <meta property="twitter:url" content="https://flavio.gay">
-    <meta name="twitter:title" content="Flavio is gay">
+    <meta property="twitter:domain" content="daniel-boll.gay">
+    <meta property="twitter:url" content="https://daniel-boll.gay">
+    <meta name="twitter:title" content="daniel-boll is gay">
     <meta name="twitter:description" content="A fabulous corner of the internet.">
-    <meta name="twitter:image" content="http://flavio.gay/og-banner.png">
+    <meta name="twitter:image" content="http://daniel-boll.gay/og-banner.png">
 
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
