--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     
     <main class="content-wrapper">
         <img src="/db.jpg" alt="Daniel's Avatar" class="avatar">
-        <h1>danie-boll.gay</h1>
+        <h1>daniel-boll.gay</h1>
         <p>A fabulous corner of the internet.</p>
         <spline-viewer 
             url="https://prod.spline.design/kQLuNH-E3UNzc3jI/scene.splinecode" 
